# Chaos-SymbioseOS

./: .gitignore  CMakeLists.txt  Interactive-Plan.md  Interactive_Plan.md  Jules.md  README.md  Symbiose Bridge KMDF Driver Research Plan.md  extract  get_def.c  phase0_1.sh  phase0_2.sh  phase0_3.sh  phase1_1.sh  pyproject.toml  rebuild_initrd.sh  scout_dispatch.py  symbiose_ircd.py  test_migrate_bench4  test_pool_flag.c  toolchain-x86_64-w64-mingw32.cmake
.github/workflows/: .gitkeep  crucible-verify.yml  forge-apbx.yml
.jules/: alchemist.md  bolt.md  cortex.md  crucible.md  forge.md
01_Chaos_Kernel/: .gitkeep  build_kernel.sh  strip_openmosix.sh  symbiose_defconfig  verify_kernel_config.sh
02_Symbiose_Bridge/: CMakeLists.txt  Directory.Build.props  packages.config  symbiose_bridge.vcxproj
02_Symbiose_Bridge/SymbioseNull/: SymbioseNull.vcxproj
02_Symbiose_Bridge/docs/: openmosix_catalog.md  seed_inventory.md  transplant_validation.md
02_Symbiose_Bridge/inc/: .gitkeep  symbiose_ioctl.h  symbiose_ioctls.h
02_Symbiose_Bridge/inf/: .gitkeep  SymbioseNull.inf  symbiose_bridge.inf
02_Symbiose_Bridge/src/: .gitkeep  SwitchToChaos.asm  acpi_handler.c  driver_entry.c  ioctl_handler.c  nvme_isolation.c  symbiose_bridge.c  symbiose_bridge.h  trace.h  vmx_hypervisor.c
03_HiveMind_Orchestrator/: CMakeLists.txt
03_HiveMind_Orchestrator/ChaosLoader/: CMakeLists.txt  whpx_boot.c
03_HiveMind_Orchestrator/ChaosLoader/src/: .gitkeep  boot_params.c  boot_params.h  demhx_midi_grammar.c  demhx_rdi.c  hive_mind_glue.c  hive_mind_init.c  kernel_ioctls.c  main.c  modality_hotswap.c  modality_router.c  moviola_delta.c  moviola_dibit.c  moviola_dvs.c  multimodal.h  scout_modality.c  symbiose_ioctls.h  tts_pipeline.c  video_temporal.c  vision_pipeline.c
03_HiveMind_Orchestrator/IRCd_Neural_Bus/: CMakeLists.txt  jumbo_payload.c  scout_dispatch.py  symbiose_ircd.py  test_symbiose_ircd.py
03_HiveMind_Orchestrator/IRCd_Neural_Bus/src/: .gitkeep  ctcp_dcc.c  dcc_tensor.c  irc_qos.c  ircd_guest_main.c  jumbo_payload.c  jumbo_payload.h  shm_ring.c  symbiose_ircd.c  symbiose_ircd.h  tensor_index.c  xdcc_bot.c
03_HiveMind_Orchestrator/OpenMosix_2026/: CMakeLists.txt
03_HiveMind_Orchestrator/OpenMosix_2026/scripts/: generated_tensors.h  llm_schema.json  ouroboros_ast_gen.py
03_HiveMind_Orchestrator/OpenMosix_2026/src/: .gitkeep  openmosix_tensor.h
03_HiveMind_Orchestrator/VFS_Storage_Manager/: CMakeLists.txt  vfs_manager.c
03_HiveMind_Orchestrator/VFS_Storage_Manager/src/: .gitkeep  vfs_manager.c  vfs_manager.h
03_HiveMind_Orchestrator/openmosix_nx/: README.md  bpf_gpu_monitor.bpf.c  criugpu_daemon.c  migrate.c  symbiose_node.py
03_HiveMind_Orchestrator/openmosix_nx/src/: .gitkeep  bpf_gpu_monitor.bpf.c  criugpu_daemon.c  kv_shard_mgr.c  migrate.c  node_score.c  openmosix_tensor.h  rdma_pool.c  rdma_stream.c  rdma_stream.h  rebalance_harmonic.c  symbiose_node.py  tensor_alloc.c  tensor_io.c
04_APBX_Transmigration/playbook/: playbook.conf
04_APBX_Transmigration/playbook/Configuration/: main.yml
04_APBX_Transmigration/playbook/Configuration/Tasks/: .gitkeep  ai_act_consensus.yml  driver_install.yml  enable_test_signing.yml  hardware_airlock.yml  hardware_probe.yml  ircd_setup.yml  kernel_install.yml  llm_deploy.yml  llm_download_hf.yml  llm_server_host.yml  model_selector.yml  phase0_config.yml  phase1.yml  phase2.yml  phase3.yml  phase4_5.yml  resource_allocation.yml  service_hardening.yml  telemetry_bind.yml  terminal_install.yml  vbs_annihilate.yml  vbs_destruction.yml
04_APBX_Transmigration/playbook/Executables/: .gitkeep  hive_mind  initrd.img
04_APBX_Transmigration/playbook/Executables/Drivers/: .gitkeep  SymbioseNull.inf
04_APBX_Transmigration/playbook/Resources/: .gitkeep  Detect-GPU.ps1  Detect-NVMe.ps1  Detect-System.ps1  Reconfigure-Symbiose.ps1  Symbiose-Configurator.ps1  Write-SymbioseConfig.ps1
04_APBX_Transmigration/playbook/config/: .gitkeep  symbiose_config.json.template
05_Integration_Tests/: CMakeLists.txt  Dockerfile.build  docker_build_all.sh  mingw-toolchain.cmake  run_all_tests.sh
05_Integration_Tests/qemu_scripts/: .gitkeep  irc_bus_test.sh  native_vmx_smoke.ps1  phase4_qemu_test.sh  test_apbx_playbook.sh  test_bridge_subsystem.sh  test_config_wizard.sh  test_dcc_ssend.sh  test_dcc_tensor.sh  test_irc_extensions.sh  test_kernel_defconfig.sh  test_mm_extended.sh  test_modality_router.sh  test_mosix_cluster.sh  test_mosix_rdma.sh  test_moviola_delta.sh  test_shm_ring.sh  test_tensor_dedup.sh  test_tts_playback.sh  test_ui_components.sh  test_vfs_nvme.sh  test_vision_pipeline.sh
06_Terminal_UI/: index.html  package-lock.json  package.json
06_Terminal_UI/src/: .gitkeep  App.tsx  index.css
06_Terminal_UI/src-tauri/: Cargo.toml  tauri.conf.json
06_Terminal_UI/src-tauri/src/: .gitkeep  irc_client.rs  lib.rs  media_capture.rs  moviola_capture.rs  screen_capture.rs  shm_ring_writer.rs  tts_playback.rs
CHAOS 1.5/: AUTORUN.INF  README  README.TXT  README.md
CHAOS 1.5/BOOT/: F1_MAIN.TXT  F2_ABOUT.TXT  F5_IP.TXT  PXELINUX.0  PXE_ZFD4.CFG
CHAOS 1.5/BOOT/ISOLINUX/: BOOT.CAT  F1_MAIN.TXT  F3_HWREQ.TXT  F4_BOOT.TXT  F6_COPY.TXT  ISOLINUX.CFG
CHAOS 1.5/BOOT/PXELINUX.CFG/: DEFAULT
CHAOS 1.5/CHAOS/: BZIMAGE  CHAOS.RDZ
CHAOS 1.5/WEB/: INDEX9.HTM
CHAOS 1.5/WEB/ABOUT/: INDEX.HTM  WALLET.HTM
CHAOS 1.5/WEB/CREDITS/: INDEX2.HTM
CHAOS 1.5/WEB/CRTNTYD/: INDEX.HTM
CHAOS 1.5/WEB/HOWTO/: INDEX3.HTM  REBOOT.TXT
CHAOS 1.5/WEB/INITD/: INDEX.HTM
CHAOS 1.5/WEB/NET/: INDEX.HTM
CHAOS 1.5/WEB/SECURITY/SCANS/: INDEX7.HTM
CHAOS 1.5/WEB/TYD/: INDEX8.HTM
CHAOS 1.5/[BOOT]/: Boot-NoEmul.img
docs/: hardware_validation_checklist.md
