[package]
name = "symbiose-terminal"
version = "0.1.0"
description = "SymbioseOS Terminal UI — Tauri v2 Backend"
authors = ["SymbioseOS Team"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77"

# ─── Features ────────────────────────────────────────────────────────────────
[features]
default = []
camera = ["dep:nokhwa"]
audio = ["dep:cpal"]

# ─── Build Dependencies ──────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2.0", features = [] }

# ─── Runtime Dependencies ────────────────────────────────────────────────────
[dependencies]
# Core Tauri framework
tauri = { version = "2.0", features = [] }

# Serialization (JSON config, IPC messages)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio I/O — tts_playback.rs (§VII·7c), media_capture.rs mic input
# Cross-platform audio host (WASAPI on Windows, CoreAudio on macOS)
cpal = { version = "0.15", optional = true }

# Camera capture — media_capture.rs (§VII·7b)
# Cross-platform webcam via Media Foundation / AVFoundation
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# IRC client — irc_client.rs (§VII·7d)
# Connects to localhost:6667 for Neural Bus communication
# Note: Our irc_client.rs uses raw TcpStream, not an IRC crate.

# Windows-specific: DXGI Desktop Duplication — screen_capture.rs (§VII·7e)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Memory",
] }

# ─── Library Configuration ───────────────────────────────────────────────────
[lib]
name = "symbiose_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

